--- a/source/contacts.html
+++ b/source/contacts.html
@@ -13,6 +13,7 @@
   <link rel='icon' href='img/favicons/favicon.png' type='image/png' sizes='32x32'>
   <link rel='apple-touch-icon' href='img/favicons/favicon-apple.png'>
   <link rel='manifest' href='manifest.webmanifest'>
+  <link rel="stylesheet" href='css/swiper-bundle.min.css'>
   <link rel='stylesheet' href='css/style.css'>
 </head>
 
@@ -119,7 +120,7 @@
             <label class='visually-hidden' for='question'>ваша почта</label>
             <textarea id='question' name='question' placeholder='Ваш вопрос...'></textarea>
             <button class='questions__btn btn-main-style' type='submit'>Отправить сообщение</button>
-            <strong class='questions__footnote'>Нажимая на кнопку вы соглашаетесь с <a href='#'>политикой конфиденциальности</a></strong>
+            <strong class='questions__footnote'>Нажимая на кнопку вы соглашаетесь с <a class='questions__privacy' href='#' role='button'>политикой конфиденциальности</a></strong>
           </form>
         </div>
       </div>
@@ -167,7 +168,7 @@
       </div>
       <div class='footer__bottom'>
         <p class='footer__copyright'>© 2020 Все права защищены.</p>
-        <a class='footer__link-privacy' href='#'>Политика конфиденциальности</a>
+        <a class='footer__link-privacy' role='button' href='#'>Политика конфиденциальности</a>
         <ul class='social'>
           <li class='social__item'>
             <a class='social__link' href='https://www.vk.com/Ladder-52' aria-label='Мы в контакте'>
@@ -189,6 +190,65 @@
 
   </footer>
 
+  <section class='popup-privacy'>
+    <div class='popup-privacy__wrapper'>
+      <div class='popup-privacy__container'>
+        <div class='popup-privacy__btn-close-wrapper'>
+          <button class='popup-privacy__btn-close' type='button'>
+            <span class='visually-hidden'>закрыть окно</span>
+          </button>
+        </div>
+        <h1 class='popup-privacy__title title-decorate'>Политика конфиденциальности</h1>
+        <p>Пользователь сайта _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ .ru (далее Пользователь) предоставляя свои персональные
+          данные ( р е к в и з и т ы к о м п а н и и а д р е с к о м п а н и и электр. адрес: _ _ _ _@_ _ _ _ _.ru,
+          телефон: 73832887808, далее Продавец) дает согласие на обработку, хранение и использование своих персональных
+          данных на основании ФЗ No 152-ФЗ «О персональных данных» от 27.07.2006 г. в следующих целях:</p>
+        <ul>
+          <li>
+            <p>Регистрации Пользователя на сайте;</p>
+          </li>
+          <li>
+            <p>Осуществление клиентской поддержки;</p>
+          </li>
+          <li>
+            <p>Получения Пользователем информации о маркетинговых событиях;</p>
+          </li>
+          <li>
+            <p>Выполнение Продавцом обязательств перед Покупателем.</p>
+          </li>
+        </ul>
+        <p>Под персональными данными подразумевается любая информация личного характера, позволяющая установить личность
+          Покупателя такая как:</p>
+        <ul>
+          <li>Фамилия, Имя, Отчество;</li>
+          <li>Контактный телефон;</li>
+          <li>Адрес электронной почты;</li>
+          <li>Почтовый адрес.</li>
+        </ul>
+        <p>Персональные данные Покупателей хранятся исключительно на электронных носителях и обрабатываются с
+          использованием автоматизированных систем, за исключением случаев, когда неавтоматизированная обработка
+          персональных данных необходима в связи с исполнением требований законодательства. Продавец обязуется не
+          передавать полученные персональные данные третьим лицам, за исключением следующих случаев:</p>
+        <ul>
+          <li>
+            <p>По запросам уполномоченных органов государственной власти РФ только по основаниям и в порядке,
+              установленным законодательством РФ;</p>
+          </li>
+          <li>
+            <p>Стратегическим партнерам, которые работают с Продавцом для предоставления продуктов и услуг, или тем из
+              них, которые помогают Продавцу реализовывать продукты и услуги потребителям. Мы предоставляем третьим лицам
+              минимальный объем персональных данных, необходимый только для оказания требуемой услуги или проведения
+              необходимой транзакции.</p>
+          </li>
+        </ul>
+        <p> Продавец оставляет за собой право вносить изменения в одностороннем порядке в настоящие правила, при условии,
+          что изменения не противоречат действующему законодательству РФ. Изменения условий настоящих правил вступают в
+          силу после их публикации на Сайте.</p>
+      </div>
+    </div>
+  </section>
+
+  <script src='js/swiper-bundle.min.js'></script>
   <script src='js/script.js'></script>
 </body>
 
