Добавлена сборка на gulp

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
   <link rel='apple-touch-icon' href='img/favicons/favicon-apple.png'>
   <link rel='manifest' href='manifest.webmanifest'>
   <link rel="stylesheet" href='css/swiper-bundle.min.css'>
-  <link rel='stylesheet' href='css/style.css'>
+  <link rel='stylesheet' href='css/style.min.css'>
 </head>
 
 <body>
@@ -285,14 +285,12 @@
               <span class='swiper-pagination-bullet' aria-label='Перейти на слайд 3' role='button' tabindex='0'></span>
             </div>
             <div class='examples__wrapper-btn'>
-
               <button class="swiper-button-prev examples__btn examples__btn--back" type='button'>
                 <span class='visually-hidden'>переключить на предыдущий слайд</span>
               </button>
               <button class="swiper-button-next examples__btn examples__btn--next" type='button'>
                 <span class='visually-hidden'>переключить на следующий слайд</span>
               </button>
-
             </div>
           </div>
         </div>
@@ -552,9 +550,8 @@
 
 
   <script src='js/swiper-bundle.min.js'></script>
-  <script src='js/script.js'></script>
-  <script src='js/promo-slider.js'></script>
-  <script src='js/examples-slider.js'></script>
+  <script src='js/script.min.js'></script>
+  <script src='js/sliders.min.js'></script>
 </body>
 
 </html>
