--- a/source/winder-ladder.html
+++ b/source/winder-ladder.html
@@ -14,7 +14,7 @@
   <link rel='apple-touch-icon' href='img/favicons/favicon-apple.png'>
   <link rel='manifest' href='manifest.webmanifest'>
   <link rel="stylesheet" href='css/swiper-bundle.min.css'>
-  <link rel='stylesheet' href='css/style.css'>
+  <link rel='stylesheet' href='css/style.min.css'>
 </head>
 
 <body>
@@ -421,7 +421,8 @@
   </section>
 
   <script src='js/swiper-bundle.min.js'></script>
-  <script src='js/script.js'></script>
+  <script src='js/script.min.js'></script>
+  <script src='js/sliders.min.js'></script>
 </body>
 
 </html>
